--- a/boogle-index.html
+++ b/boogle-index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-
     <meta charset="utf-8">
-
 <title>boogle</title>
-
     <link href="boogle-style.css" type="text/css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-
-
 <body>
-
 <div class="head">
     <img id="headimg" src="booglelogo_neu.png">
+    <h1>Welcome to Google! Please sign in!</h1>
 </div>
 <div class="main">
     <img src="booglelogo_neu.png"> <br>
@@ -26,10 +20,23 @@
     <div>
     <input class="loginpw" type="password"  placeholder="Passwort">
     </div>
+    <div>
+        <label class="checkremember"> Remind me?
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+    </div>
 <div>
-    <button type="submit" id="button"> <a href="LoginError.html"> Login </button>
+    <a href="LoginSuccessfull.html">
+    <button type="submit" class="button"> Login </button>
+    </a>
+    <p>or <a href="boogle-signup.html">Sign Up </a></p>
 </div>
+</div>
+<div>
+    <span> Other Services: </span>
+    <span> <a href="https://www.google.de/maps"><img class="icons"  src="https://cdn1.iconfinder.com/data/icons/logotypes/32/google-drive-512.png" alt="Google Drive Icon"></a> </span>
+    <span> <a href="https://www.google.de/maps"><img class="icons"  src="http://pluspng.com/img-png/google-maps-png-google-maps-icon-1600.png" alt="Google Maps Icon"></a> </span>
 </div>
 </body>
-
 </html>
